Investigated hazard relationship of prognostic genes.

--- a/feature_selection_analysis/coxph_l1.ipynb
+++ b/feature_selection_analysis/coxph_l1.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "expressed-gauge",
+   "id": "molecular-lying",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "greek-beatles",
+   "id": "integrated-capitol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "advisory-albert",
+   "id": "retired-mediterranean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "distinct-greece",
+   "id": "built-calculator",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_status = \u001b[31mcol_character()\u001b[39m,\n",
@@ -103,7 +103,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  cutoff = \u001b[32mcol_double()\u001b[39m\n",
@@ -111,7 +111,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -130,8 +130,6 @@
     "cutoff_df <- read_tsv(paste0(dirs$analysis_dir, \"/survival/\", unified_dsets[dset_idx], \"_expression_cutoffs.tsv\"))\n",
     "\n",
     "filtered_survival_df <- survival_df %>%\n",
-    "#     decode_figo_stage(to = \"c\") %>%\n",
-    "#     dplyr::select(one_of(c(\"sample_name\", dep_cols, covariate_cols))) %>%\n",
     "    dplyr::select(one_of(c(\"sample_name\", dep_cols))) %>%\n",
     "    dplyr::filter(rowSums(is.na(.)) == 0)\n",
     "\n",
@@ -151,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "smoking-transition",
+   "id": "straight-cathedral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "removed-musical",
+   "id": "legislative-pressure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "accessible-intelligence",
+   "id": "disciplinary-source",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "first-reconstruction",
+   "id": "first-machinery",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "provincial-church",
+   "id": "announced-pittsburgh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,173 +247,27 @@
     "# Std. error assoc. with lowest cv error\n",
     "cv_min_se <- cv_cph_model$cvsd[cv_min_idx]\n",
     "\n",
-    "best_lambda <- cv_cph_model$lambda.min\n",
+    "# best_lambda <- cv_cph_model$lambda.min\n",
     "min_lambda_1se <- cv_cph_model$lambda[cv_cph_model$cvm < cv_min_cvm + cv_min_se] %>% last()\n",
-    "max_lambda_1se <- cv_cph_model$lambda.1se"
+    "min_lambda_1se_genes <- as.matrix(coef(cv_cph_model, s = min_lambda_1se))[, 1] != 0\n",
+    "# max_lambda_1se <- cv_cph_model$lambda.1se"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fifth-quick",
+   "id": "powerful-mouth",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "0"
-      ],
-      "text/latex": [
-       "0"
-      ],
-      "text/markdown": [
-       "0"
-      ],
-      "text/plain": [
-       "[1] 0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/latex": [],
-      "text/markdown": [],
-      "text/plain": [
-       "character(0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "11"
-      ],
-      "text/latex": [
-       "11"
-      ],
-      "text/markdown": [
-       "11"
-      ],
-      "text/plain": [
-       "[1] 11"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'TGM5'</li><li>'PCOLCE2'</li><li>'COL6A5'</li><li>'TNFSF11'</li><li>'ANGPTL2'</li><li>'SERPIND1'</li><li>'LGI2'</li><li>'FGF19'</li><li>'CBLN3'</li><li>'COL5A3'</li><li>'CST6'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'TGM5'\n",
-       "\\item 'PCOLCE2'\n",
-       "\\item 'COL6A5'\n",
-       "\\item 'TNFSF11'\n",
-       "\\item 'ANGPTL2'\n",
-       "\\item 'SERPIND1'\n",
-       "\\item 'LGI2'\n",
-       "\\item 'FGF19'\n",
-       "\\item 'CBLN3'\n",
-       "\\item 'COL5A3'\n",
-       "\\item 'CST6'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'TGM5'\n",
-       "2. 'PCOLCE2'\n",
-       "3. 'COL6A5'\n",
-       "4. 'TNFSF11'\n",
-       "5. 'ANGPTL2'\n",
-       "6. 'SERPIND1'\n",
-       "7. 'LGI2'\n",
-       "8. 'FGF19'\n",
-       "9. 'CBLN3'\n",
-       "10. 'COL5A3'\n",
-       "11. 'CST6'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"TGM5\"     \"PCOLCE2\"  \"COL6A5\"   \"TNFSF11\"  \"ANGPTL2\"  \"SERPIND1\"\n",
-       " [7] \"LGI2\"     \"FGF19\"    \"CBLN3\"    \"COL5A3\"   \"CST6\"    "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "0"
-      ],
-      "text/latex": [
-       "0"
-      ],
-      "text/markdown": [
-       "0"
-      ],
-      "text/plain": [
-       "[1] 0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/latex": [],
-      "text/markdown": [],
-      "text/plain": [
-       "character(0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "best_lambda_genes <- as.matrix(coef(cv_cph_model, s = best_lambda))[, 1] != 0\n",
-    "min_lambda_1se_genes <- as.matrix(coef(cv_cph_model, s = min_lambda_1se))[, 1] != 0\n",
-    "max_lambda_1se_genes <- as.matrix(coef(cv_cph_model, s = max_lambda_1se))[, 1] != 0\n",
-    "\n",
-    "length(colnames(x)[best_lambda_genes])\n",
-    "colnames(x)[best_lambda_genes]\n",
-    "\n",
-    "length(colnames(x)[min_lambda_1se_genes])\n",
-    "colnames(x)[min_lambda_1se_genes]\n",
-    "\n",
-    "length(colnames(x)[max_lambda_1se_genes])\n",
-    "colnames(x)[max_lambda_1se_genes]"
+    "cv_cph_model_coeffs <- as.matrix(coef(cv_cph_model, s = min_lambda_1se))\n",
+    "important_gene_df <- tibble(geneID = colnames(x)[min_lambda_1se_genes], coeff = cv_cph_model_coeffs[min_lambda_1se_genes])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "hungry-cinema",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "important_gene_df <- tibble(geneID = colnames(x)[min_lambda_1se_genes])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "weighted-meaning",
+   "id": "innocent-smith",
    "metadata": {},
    "outputs": [],
    "source": [
