--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sapphire-society",
+   "id": "generous-developer",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "blessed-lyric",
+   "id": "functional-delay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "afraid-shannon",
+   "id": "proof-consumer",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 2\n",
+    "dset_idx <- 3\n",
     "save_lists <- TRUE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "continuous-completion",
+   "id": "velvet-system",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "declared-sheffield",
+   "id": "frank-coating",
    "metadata": {},
    "source": [
     "# Functions"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "headed-summer",
+   "id": "protected-paintball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "facial-forest",
+   "id": "still-shore",
    "metadata": {},
    "source": [
     "# Data"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "structural-trigger",
+   "id": "hungarian-grove",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alpine-detroit",
+   "id": "simplified-mistake",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "miniature-vulnerability",
+   "id": "floppy-salvation",
    "metadata": {},
    "source": [
     "## DEG"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "handy-sterling",
+   "id": "powered-testing",
    "metadata": {},
    "outputs": [
     {
@@ -292,47 +292,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>7646</dd>\n",
+       "\t\t<dd>8229</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.377729473372196</dd>\n",
+       "\t\t<dd>0.406530975200079</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>4682</dd>\n",
+       "\t\t<dd>4862</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>2964</dd>\n",
+       "\t\t<dd>3367</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 7646\n",
-       "\\item[\\$deg\\_prop] 0.377729473372196\n",
-       "\\item[\\$n\\_up] 4682\n",
-       "\\item[\\$n\\_down] 2964\n",
+       "\\item[\\$n\\_deg] 8229\n",
+       "\\item[\\$deg\\_prop] 0.406530975200079\n",
+       "\\item[\\$n\\_up] 4862\n",
+       "\\item[\\$n\\_down] 3367\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   7646\n",
+       ":   8229\n",
        "$deg_prop\n",
-       ":   0.377729473372196\n",
+       ":   0.406530975200079\n",
        "$n_up\n",
-       ":   4682\n",
+       ":   4862\n",
        "$n_down\n",
-       ":   2964\n",
+       ":   3367\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 7646\n",
+       "[1] 8229\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.3777295\n",
+       "[1] 0.406531\n",
        "\n",
        "$n_up\n",
-       "[1] 4682\n",
+       "[1] 4862\n",
        "\n",
        "$n_down\n",
-       "[1] 2964\n"
+       "[1] 3367\n"
       ]
      },
      "metadata": {},
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-vertical",
+   "id": "previous-delaware",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "rolled-community",
+   "id": "tough-church",
    "metadata": {},
    "outputs": [
     {
@@ -363,47 +363,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>595</dd>\n",
+       "\t\t<dd>618</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.590277777777778</dd>\n",
+       "\t\t<dd>0.613095238095238</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>363</dd>\n",
+       "\t\t<dd>317</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>232</dd>\n",
+       "\t\t<dd>301</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 595\n",
-       "\\item[\\$deg\\_prop] 0.590277777777778\n",
-       "\\item[\\$n\\_up] 363\n",
-       "\\item[\\$n\\_down] 232\n",
+       "\\item[\\$n\\_deg] 618\n",
+       "\\item[\\$deg\\_prop] 0.613095238095238\n",
+       "\\item[\\$n\\_up] 317\n",
+       "\\item[\\$n\\_down] 301\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   595\n",
+       ":   618\n",
        "$deg_prop\n",
-       ":   0.590277777777778\n",
+       ":   0.613095238095238\n",
        "$n_up\n",
-       ":   363\n",
+       ":   317\n",
        "$n_down\n",
-       ":   232\n",
+       ":   301\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 595\n",
+       "[1] 618\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.5902778\n",
+       "[1] 0.6130952\n",
        "\n",
        "$n_up\n",
-       "[1] 363\n",
+       "[1] 317\n",
        "\n",
        "$n_down\n",
-       "[1] 232\n"
+       "[1] 301\n"
       ]
      },
      "metadata": {},
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "committed-starter",
+   "id": "jewish-texas",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "close-survivor",
+   "id": "vulnerable-aircraft",
    "metadata": {},
    "source": [
     "## Welch ANOVA"
@@ -436,23 +436,23 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "entitled-cathedral",
+   "id": "based-experiment",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_sig</strong> = 12"
+       "<strong>$n_sig</strong> = 16"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_sig} = 12"
+       "\\textbf{\\$n\\_sig} = 16"
       ],
       "text/markdown": [
-       "**$n_sig** = 12"
+       "**$n_sig** = 16"
       ],
       "text/plain": [
        "$n_sig\n",
-       "[1] 12\n"
+       "[1] 16\n"
       ]
      },
      "metadata": {},
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smooth-nickel",
+   "id": "textile-surprise",
    "metadata": {},
    "source": [
     "## MI"
@@ -475,23 +475,23 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "mighty-disco",
+   "id": "alleged-rouge",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_mi</strong> = 30"
+       "<strong>$n_mi</strong> = 52"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_mi} = 30"
+       "\\textbf{\\$n\\_mi} = 52"
       ],
       "text/markdown": [
-       "**$n_mi** = 30"
+       "**$n_mi** = 52"
       ],
       "text/plain": [
        "$n_mi\n",
-       "[1] 30\n"
+       "[1] 52\n"
       ]
      },
      "metadata": {},
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuous-exclusive",
+   "id": "authorized-mountain",
    "metadata": {},
    "source": [
     "# ML baselines"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "initial-learning",
+   "id": "earlier-rotation",
    "metadata": {},
    "outputs": [
     {
@@ -522,47 +522,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$dataset</dt>\n",
-       "\t\t<dd>'unified_uterine_data'</dd>\n",
+       "\t\t<dd>'unified_uterine_endometrial_data'</dd>\n",
        "\t<dt>$naive</dt>\n",
-       "\t\t<dd>0.140625</dd>\n",
+       "\t\t<dd>0.173809523809524</dd>\n",
        "\t<dt>$mc</dt>\n",
-       "\t\t<dd>0.246008409683536</dd>\n",
+       "\t\t<dd>0.248283168400536</dd>\n",
        "\t<dt>$n_obs</dt>\n",
-       "\t\t<dd>46</dd>\n",
+       "\t\t<dd>137</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$dataset] 'unified\\_uterine\\_data'\n",
-       "\\item[\\$naive] 0.140625\n",
-       "\\item[\\$mc] 0.246008409683536\n",
-       "\\item[\\$n\\_obs] 46\n",
+       "\\item[\\$dataset] 'unified\\_uterine\\_endometrial\\_data'\n",
+       "\\item[\\$naive] 0.173809523809524\n",
+       "\\item[\\$mc] 0.248283168400536\n",
+       "\\item[\\$n\\_obs] 137\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$dataset\n",
-       ":   'unified_uterine_data'\n",
+       ":   'unified_uterine_endometrial_data'\n",
        "$naive\n",
-       ":   0.140625\n",
+       ":   0.173809523809524\n",
        "$mc\n",
-       ":   0.246008409683536\n",
+       ":   0.248283168400536\n",
        "$n_obs\n",
-       ":   46\n",
+       ":   137\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$dataset\n",
-       "[1] \"unified_uterine_data\"\n",
+       "[1] \"unified_uterine_endometrial_data\"\n",
        "\n",
        "$naive\n",
-       "[1] 0.140625\n",
+       "[1] 0.1738095\n",
        "\n",
        "$mc\n",
-       "[1] 0.2460084\n",
+       "[1] 0.2482832\n",
        "\n",
        "$n_obs\n",
-       "[1] 46\n"
+       "[1] 137\n"
       ]
      },
      "metadata": {},
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "settled-possession",
+   "id": "suffering-disability",
    "metadata": {},
    "source": [
     "# LR (L1)"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "passing-hughes",
+   "id": "mighty-senegal",
    "metadata": {},
    "outputs": [
     {
@@ -596,47 +596,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$avg_score</dt>\n",
-       "\t\t<dd>0.304563492063492</dd>\n",
+       "\t\t<dd>0.354026811258891</dd>\n",
        "\t<dt>$naive_pct_imp</dt>\n",
-       "\t\t<dd>116.57848324515</dd>\n",
+       "\t\t<dd>103.686658532513</dd>\n",
        "\t<dt>$mc_pct_imp</dt>\n",
-       "\t\t<dd>23.8020653258485</dd>\n",
+       "\t\t<dd>42.5899361360523</dd>\n",
        "\t<dt>$n_genes</dt>\n",
-       "\t\t<dd>28</dd>\n",
+       "\t\t<dd>76</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$avg\\_score] 0.304563492063492\n",
-       "\\item[\\$naive\\_pct\\_imp] 116.57848324515\n",
-       "\\item[\\$mc\\_pct\\_imp] 23.8020653258485\n",
-       "\\item[\\$n\\_genes] 28\n",
+       "\\item[\\$avg\\_score] 0.354026811258891\n",
+       "\\item[\\$naive\\_pct\\_imp] 103.686658532513\n",
+       "\\item[\\$mc\\_pct\\_imp] 42.5899361360523\n",
+       "\\item[\\$n\\_genes] 76\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$avg_score\n",
-       ":   0.304563492063492\n",
+       ":   0.354026811258891\n",
        "$naive_pct_imp\n",
-       ":   116.57848324515\n",
+       ":   103.686658532513\n",
        "$mc_pct_imp\n",
-       ":   23.8020653258485\n",
+       ":   42.5899361360523\n",
        "$n_genes\n",
-       ":   28\n",
+       ":   76\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$avg_score\n",
-       "[1] 0.3045635\n",
+       "[1] 0.3540268\n",
        "\n",
        "$naive_pct_imp\n",
-       "[1] 116.5785\n",
+       "[1] 103.6867\n",
        "\n",
        "$mc_pct_imp\n",
-       "[1] 23.80207\n",
+       "[1] 42.58994\n",
        "\n",
        "$n_genes\n",
-       "[1] 28\n"
+       "[1] 76\n"
       ]
      },
      "metadata": {},
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accompanied-necessity",
+   "id": "cross-liability",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aquatic-providence",
+   "id": "failing-component",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ethical-prize",
+   "id": "southern-serial",
    "metadata": {},
    "outputs": [
     {
@@ -690,20 +690,20 @@
        "\t<dt>$n_sig_modules</dt>\n",
        "\t\t<dd>3</dd>\n",
        "\t<dt>$n_sig_genes</dt>\n",
-       "\t\t<dd>175</dd>\n",
+       "\t\t<dd>71</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
        "\\item[\\$n\\_sig\\_modules] 3\n",
-       "\\item[\\$n\\_sig\\_genes] 175\n",
+       "\\item[\\$n\\_sig\\_genes] 71\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_sig_modules\n",
        ":   3\n",
        "$n_sig_genes\n",
-       ":   175\n",
+       ":   71\n",
        "\n",
        "\n"
       ],
@@ -712,7 +712,7 @@
        "[1] 3\n",
        "\n",
        "$n_sig_genes\n",
-       "[1] 175\n"
+       "[1] 71\n"
       ]
      },
      "metadata": {},
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cosmetic-proposal",
+   "id": "breeding-treat",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "worth-straight",
+   "id": "purple-barcelona",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,22 +755,22 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "surface-medline",
+   "id": "otherwise-calibration",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "7646"
+       "8229"
       ],
       "text/latex": [
-       "7646"
+       "8229"
       ],
       "text/markdown": [
-       "7646"
+       "8229"
       ],
       "text/plain": [
-       "[1] 7646"
+       "[1] 8229"
       ]
      },
      "metadata": {},
@@ -779,16 +779,16 @@
     {
      "data": {
       "text/html": [
-       "595"
+       "618"
       ],
       "text/latex": [
-       "595"
+       "618"
       ],
       "text/markdown": [
-       "595"
+       "618"
       ],
       "text/plain": [
-       "[1] 595"
+       "[1] 618"
       ]
      },
      "metadata": {},
@@ -797,16 +797,16 @@
     {
      "data": {
       "text/html": [
-       "65"
+       "135"
       ],
       "text/latex": [
-       "65"
+       "135"
       ],
       "text/markdown": [
-       "65"
+       "135"
       ],
       "text/plain": [
-       "[1] 65"
+       "[1] 135"
       ]
      },
      "metadata": {},
@@ -815,16 +815,16 @@
     {
      "data": {
       "text/html": [
-       "175"
+       "71"
       ],
       "text/latex": [
-       "175"
+       "71"
       ],
       "text/markdown": [
-       "175"
+       "71"
       ],
       "text/plain": [
-       "[1] 175"
+       "[1] 71"
       ]
      },
      "metadata": {},
@@ -833,16 +833,16 @@
     {
      "data": {
       "text/html": [
-       "37"
+       "82"
       ],
       "text/latex": [
-       "37"
+       "82"
       ],
       "text/markdown": [
-       "37"
+       "82"
       ],
       "text/plain": [
-       "[1] 37"
+       "[1] 82"
       ]
      },
      "metadata": {},
@@ -851,16 +851,16 @@
     {
      "data": {
       "text/html": [
-       "106"
+       "44"
       ],
       "text/latex": [
-       "106"
+       "44"
       ],
       "text/markdown": [
-       "106"
+       "44"
       ],
       "text/plain": [
-       "[1] 106"
+       "[1] 44"
       ]
      },
      "metadata": {},
@@ -869,16 +869,16 @@
     {
      "data": {
       "text/html": [
-       "9"
+       "7"
       ],
       "text/latex": [
-       "9"
+       "7"
       ],
       "text/markdown": [
-       "9"
+       "7"
       ],
       "text/plain": [
-       "[1] 9"
+       "[1] 7"
       ]
      },
      "metadata": {},
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "varying-murder",
+   "id": "upper-closure",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "laden-distributor",
+   "id": "adaptive-landing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dominant-premiere",
+   "id": "olympic-projector",
    "metadata": {},
    "outputs": [],
    "source": []
