--- a/meta_analysis/survival_meta.ipynb
+++ b/meta_analysis/survival_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "narrow-berlin",
+   "id": "social-turkey",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "express-subcommittee",
+   "id": "willing-guard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +45,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "future-patio",
+   "id": "connected-fourth",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1"
+    "dset_idx <- 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "monthly-philippines",
+   "id": "transsexual-qualification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "expressed-skiing",
+   "id": "involved-difference",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,8 @@
       "  km_pval = \u001b[32mcol_double()\u001b[39m,\n",
       "  km_qval = \u001b[32mcol_double()\u001b[39m,\n",
       "  cph_pval = \u001b[32mcol_double()\u001b[39m,\n",
-      "  cph_qval = \u001b[32mcol_double()\u001b[39m\n",
+      "  cph_qval = \u001b[32mcol_double()\u001b[39m,\n",
+      "  coeff = \u001b[32mcol_double()\u001b[39m\n",
       ")\n",
       "\n",
       "\n"
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "right-spanish",
+   "id": "original-combat",
    "metadata": {},
    "source": [
     "# Univariate Survival"
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "endangered-penny",
+   "id": "subtle-luxembourg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,22 +115,22 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "simplified-camera",
+   "id": "satisfactory-philip",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "10"
+       "1"
       ],
       "text/latex": [
-       "10"
+       "1"
       ],
       "text/markdown": [
-       "10"
+       "1"
       ],
       "text/plain": [
-       "[1] 10"
+       "[1] 1"
       ]
      },
      "metadata": {},
@@ -143,80 +144,44 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "premium-chemistry",
+   "id": "helpful-remains",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A spec_tbl_df: 10 × 5</caption>\n",
+       "<caption>A spec_tbl_df: 1 × 6</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>geneID</th><th scope=col>km_pval</th><th scope=col>km_qval</th><th scope=col>cph_pval</th><th scope=col>cph_qval</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>geneID</th><th scope=col>km_pval</th><th scope=col>km_qval</th><th scope=col>cph_pval</th><th scope=col>cph_qval</th><th scope=col>coeff</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>CXCL2  </td><td>0.0002407716</td><td>0.02789489</td><td>0.0008898265</td><td>0.023240547</td></tr>\n",
-       "\t<tr><td>IL1B   </td><td>0.0009832634</td><td>0.03797240</td><td>0.0004481667</td><td>0.017557872</td></tr>\n",
-       "\t<tr><td>LAMC1  </td><td>0.0684853932</td><td>0.54391059</td><td>0.0031423997</td><td>0.054428135</td></tr>\n",
-       "\t<tr><td>FIGF   </td><td>0.0244875096</td><td>0.43981639</td><td>0.0117976482</td><td>0.115549404</td></tr>\n",
-       "\t<tr><td>TNF    </td><td>0.0472823310</td><td>0.50340616</td><td>0.0060013587</td><td>0.078371939</td></tr>\n",
-       "\t<tr><td>LGALS9C</td><td>0.0265735780</td><td>0.43981639</td><td>0.0163736893</td><td>0.128492440</td></tr>\n",
-       "\t<tr><td>CCL17  </td><td>0.1104378480</td><td>0.73156362</td><td>0.0034732113</td><td>0.054428135</td></tr>\n",
-       "\t<tr><td>PLOD2  </td><td>0.0005922877</td><td>0.03431011</td><td>0.0000714658</td><td>0.005599645</td></tr>\n",
-       "\t<tr><td>EGLN3  </td><td>0.1396639457</td><td>0.73156362</td><td>0.0114106823</td><td>0.115549404</td></tr>\n",
-       "\t<tr><td>LAMC2  </td><td>0.2392406336</td><td>0.81522115</td><td>0.0163989227</td><td>0.128492440</td></tr>\n",
+       "\t<tr><td>COL5A3</td><td>0.009416507</td><td>0.3484108</td><td>0.003190413</td><td>0.1074039</td><td>0.6365094</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A spec\\_tbl\\_df: 10 × 5\n",
-       "\\begin{tabular}{lllll}\n",
-       " geneID & km\\_pval & km\\_qval & cph\\_pval & cph\\_qval\\\\\n",
-       " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "A spec\\_tbl\\_df: 1 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " geneID & km\\_pval & km\\_qval & cph\\_pval & cph\\_qval & coeff\\\\\n",
+       " <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t CXCL2   & 0.0002407716 & 0.02789489 & 0.0008898265 & 0.023240547\\\\\n",
-       "\t IL1B    & 0.0009832634 & 0.03797240 & 0.0004481667 & 0.017557872\\\\\n",
-       "\t LAMC1   & 0.0684853932 & 0.54391059 & 0.0031423997 & 0.054428135\\\\\n",
-       "\t FIGF    & 0.0244875096 & 0.43981639 & 0.0117976482 & 0.115549404\\\\\n",
-       "\t TNF     & 0.0472823310 & 0.50340616 & 0.0060013587 & 0.078371939\\\\\n",
-       "\t LGALS9C & 0.0265735780 & 0.43981639 & 0.0163736893 & 0.128492440\\\\\n",
-       "\t CCL17   & 0.1104378480 & 0.73156362 & 0.0034732113 & 0.054428135\\\\\n",
-       "\t PLOD2   & 0.0005922877 & 0.03431011 & 0.0000714658 & 0.005599645\\\\\n",
-       "\t EGLN3   & 0.1396639457 & 0.73156362 & 0.0114106823 & 0.115549404\\\\\n",
-       "\t LAMC2   & 0.2392406336 & 0.81522115 & 0.0163989227 & 0.128492440\\\\\n",
+       "\t COL5A3 & 0.009416507 & 0.3484108 & 0.003190413 & 0.1074039 & 0.6365094\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A spec_tbl_df: 10 × 5\n",
+       "A spec_tbl_df: 1 × 6\n",
        "\n",
-       "| geneID &lt;chr&gt; | km_pval &lt;dbl&gt; | km_qval &lt;dbl&gt; | cph_pval &lt;dbl&gt; | cph_qval &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|\n",
-       "| CXCL2   | 0.0002407716 | 0.02789489 | 0.0008898265 | 0.023240547 |\n",
-       "| IL1B    | 0.0009832634 | 0.03797240 | 0.0004481667 | 0.017557872 |\n",
-       "| LAMC1   | 0.0684853932 | 0.54391059 | 0.0031423997 | 0.054428135 |\n",
-       "| FIGF    | 0.0244875096 | 0.43981639 | 0.0117976482 | 0.115549404 |\n",
-       "| TNF     | 0.0472823310 | 0.50340616 | 0.0060013587 | 0.078371939 |\n",
-       "| LGALS9C | 0.0265735780 | 0.43981639 | 0.0163736893 | 0.128492440 |\n",
-       "| CCL17   | 0.1104378480 | 0.73156362 | 0.0034732113 | 0.054428135 |\n",
-       "| PLOD2   | 0.0005922877 | 0.03431011 | 0.0000714658 | 0.005599645 |\n",
-       "| EGLN3   | 0.1396639457 | 0.73156362 | 0.0114106823 | 0.115549404 |\n",
-       "| LAMC2   | 0.2392406336 | 0.81522115 | 0.0163989227 | 0.128492440 |\n",
+       "| geneID &lt;chr&gt; | km_pval &lt;dbl&gt; | km_qval &lt;dbl&gt; | cph_pval &lt;dbl&gt; | cph_qval &lt;dbl&gt; | coeff &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| COL5A3 | 0.009416507 | 0.3484108 | 0.003190413 | 0.1074039 | 0.6365094 |\n",
        "\n"
       ],
       "text/plain": [
-       "   geneID  km_pval      km_qval    cph_pval     cph_qval   \n",
-       "1  CXCL2   0.0002407716 0.02789489 0.0008898265 0.023240547\n",
-       "2  IL1B    0.0009832634 0.03797240 0.0004481667 0.017557872\n",
-       "3  LAMC1   0.0684853932 0.54391059 0.0031423997 0.054428135\n",
-       "4  FIGF    0.0244875096 0.43981639 0.0117976482 0.115549404\n",
-       "5  TNF     0.0472823310 0.50340616 0.0060013587 0.078371939\n",
-       "6  LGALS9C 0.0265735780 0.43981639 0.0163736893 0.128492440\n",
-       "7  CCL17   0.1104378480 0.73156362 0.0034732113 0.054428135\n",
-       "8  PLOD2   0.0005922877 0.03431011 0.0000714658 0.005599645\n",
-       "9  EGLN3   0.1396639457 0.73156362 0.0114106823 0.115549404\n",
-       "10 LAMC2   0.2392406336 0.81522115 0.0163989227 0.128492440"
+       "  geneID km_pval     km_qval   cph_pval    cph_qval  coeff    \n",
+       "1 COL5A3 0.009416507 0.3484108 0.003190413 0.1074039 0.6365094"
       ]
      },
      "metadata": {},
@@ -229,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seventh-silence",
+   "id": "supported-acquisition",
    "metadata": {},
    "source": [
     "# Cox PH Lasso"
@@ -238,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sealed-blocking",
+   "id": "opposed-cholesterol",
    "metadata": {},
    "outputs": [],
    "source": []
